@@ -470,8 +470,6 @@ adv7170_detect_client (struct i2c_adapter *adapter,
 		       client->name, i);
 	}
 
-	MOD_INC_USE_COUNT;
-
 	return 0;
 }
 
@@ -498,8 +496,6 @@ adv7170_detach_client (struct i2c_client *client)
 
 	kfree(encoder);
 	kfree(client);
-
-	MOD_DEC_USE_COUNT;
 
 	return 0;
 }
