@@ -1166,8 +1166,6 @@ saa7114_detect_client (struct i2c_adapter *adapter,
 			client->addr << 1);
 	}
 
-	MOD_INC_USE_COUNT;
-
 	return 0;
 }
 
@@ -1194,8 +1192,6 @@ saa7114_detach_client (struct i2c_client *client)
 
 	kfree(decoder);
 	kfree(client);
-
-	MOD_DEC_USE_COUNT;
 
 	return 0;
 }
